# sakasu

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/core/: Cargo.toml
crates/core/src/: commitment.rs  error.rs  lib.rs  merkle.rs  nullifier.rs  transfer.rs
crates/core/tests/: commitment_test.rs  merkle_test.rs  nullifier_test.rs
crates/relayer/: Cargo.toml
crates/relayer/src/: lib.rs  main.rs  network.rs  staking.rs
crates/relayer/tests/: staking_test.rs
docs/: architecture.md  relayer-economics.md  security-model.md  zk-circuit.md
sdk/: README.md  package-lock.json  package.json  tsconfig.json
sdk/src/: client.ts  commitment.ts  index.ts  intent.ts  relayer.ts
sdk/src/__tests__/: commitment.test.ts  intent.test.ts
zk/: README.md  package.json  test_commitment_proof.js
zk/circuits/: commitment_proof.circom
