[package]
name = "sakasu-relayer"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sakasu-relayer"
path = "src/main.rs"

[dependencies]
sakasu-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
